--- a/src/app/modules/ingresos/pages/ver-ingreso/ver-ingreso.html
+++ b/src/app/modules/ingresos/pages/ver-ingreso/ver-ingreso.html
@@ -4,7 +4,7 @@
         <!-- HEADER -->
         <div class="ver-ingreso-header">
             <div class="header-content">
-                <h3 class="ingreso-title">📦 Ingreso de Inventario</h3>
+                <h3 class="ingreso-title">Ingreso de Inventario</h3>
                 <div class="header-actions">
 
                     <button class="btn-volver" type="button" (click)="volver()">
