--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -23,7 +23,7 @@
       </span>
 
       <!-- TEXTO SOLO CUANDO ESTÁ ABIERTO -->
-      <span class="logo-text" *ngIf="!collapsed">Óptica</span>
+      <span class="logo-text" *ngIf="!collapsed">Menú</span>
     </button>
 
     </div>
